--- a/src/scss/components/_technologies-listing.scss
+++ b/src/scss/components/_technologies-listing.scss
@@ -30,39 +30,40 @@
     }
 
     .title_2{
-        max-width: 520px;
+        max-width: 65%;
         margin: 0 auto;
 
         @media (max-width:1300px) {
-            max-width: 400px;
+            max-width: 60%;
         }
 
         @media (max-width:991px) {
            margin: 40px 0 0;
-           max-width: 310px;
         }
 
+        @media (max-width:767px) {
+           max-width: 100%;
+        }
 
-        img{
-            right: 0;
-            bottom: 8px;
-
-            @media (max-width:1300px) {
-                max-width: 65%;
-                bottom: 4px;
-                right: 10px;
-            }
-
-            @media (max-width:1200px) {
-                max-width: 62%;
-                bottom: 3px;
-                right: 14px;
-            }
+        span{
+            display: block;
+            position: relative;
+            width: fit-content;
+            margin: 0 auto;
 
             @media (max-width:991px) {
-                max-width: 172px;
-                bottom: -2px;
+                margin: 0;
+            }
+
+            img{
+                position: absolute;
                 left: -10px;
+                top: -22px;
+                max-width: 105%;
+
+                @media (max-width:1300px) {
+                    top: -8px;
+                }
             }
         }
     }
