--- a/src/scss/components/_services-listing.scss
+++ b/src/scss/components/_services-listing.scss
@@ -44,6 +44,14 @@
             @media (max-width:991px) {
                 margin-top: 40px;
             }
+
+            @media (max-width:767px) {
+                margin-top: 0;
+            }
+        }
+
+        p{
+            margin-top: 30px;
         }
     }
 
@@ -58,6 +66,27 @@
         @media (max-width:991px) {
             max-width: 100%;
         }
+    }
+
+    &__bgsvg{
+        position: absolute;
+        top: -63%;
+        left: 0;
+
+        @media (max-width:1300px) {
+            max-width: 60%;
+            top: -80%;
+        }
+
+
+        @media (max-width:991px) {
+            display: none;
+        }
+    }
+
+    .container{
+        position: relative;
+        z-index: 4;
     }
 
     &_items{
